--- a/caseStudies/A55Sign.html
+++ b/caseStudies/A55Sign.html
@@ -24,12 +24,12 @@
             <li><a href="../contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <div class="banner A55Sign"></div>
-    <div id="title"  class="title">
-        <h1>FCC A55 Sign installation</h1>
-    </div>
     <main>
-        <article>
+        <article class="banner">
+            <img src="../stylesheets/images/A55-banner.png" alt="staff members working in an office">
+            <h1>FCC A55 Sign installation</h1>
+        </article>
+        <article class="grey">
             <p>We were appointed by Flintshire County Council on a 
                 scheme which consisted of replacing the existing 
                 brown Tourism Signs at Junctions 31 and 32 on the 
@@ -75,7 +75,8 @@
                 at the pre-start meeting. The contract value was £49,660.00 and all works 
                 were delivered on time and to the client’s specification.</p>
         </article>
-        <article class="testimonial">
+        <article>    
+            <section class="testimonial">
             <p>“I recently appointed A Parry Construction Co. Ltd as the Principal Contractor 
                 on a sign installation project along the A55 in Holywell (Eastbound and 
                 Westbound)</p>
@@ -92,6 +93,7 @@
                 have no issues whatsoever in appointing them as Principle Contractors on 
                 any future projects with ourselves”</p>
             <h3>Nic Houston - Flintshire County Council</h3>
+            </section>
         </article>
     </main>
     <footer>
