--- a/caseStudies/eiriasPark.html
+++ b/caseStudies/eiriasPark.html
@@ -24,12 +24,12 @@
             <li><a href="../contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <div class="banner eiriasPark"></div>
-    <div id="title"  class="title">
-        <h1>Eirias Park Lighting</h1>
-    </div>
     <main>
-        <article>
+        <article class="banner">
+            <img src="../stylesheets/images/eirias-banner.png" alt="staff members working in an office">
+            <h1>Eirias Park Lighting</h1>
+        </article>
+        <article class="grey">
             <p>We were appointed by the principal contractor <a href="https://mega-electrical.co.uk/">
                 Mega Electrical NW Ltd</a> to undertake the civils engineering works for new lighting 
                 scheme at Eirias Park. The area in which the lighting was to be 
@@ -69,20 +69,22 @@
                 for Mega Electrical NW Ltd. to provide a progress report and ensure full 
                 transparency of management information.</p>
         </article>
-        <article class="testimonial">
-            <p>“A Parry Construction Co. Ltd. were recently appointed by Principal 
-                Contractor, Mega Electrical NW Ltd. on a Welsh Government lighting 
-                upgrade scheme at Parc Eirias. The project was procured through the 
-                NMWTRA framework on behalf of Conwy County Borough Council</p>
-            <p>A Parry Construction carried out all the groundworks for the lighting 
-                scheme. They maintained good lines of communication with all stakeholders 
-                which enabled them to work seamlessly within the partnership. The site 
-                team were knowledgeable and professional with good working practices, they 
-                kept the site clean and tidy throughout the construction phase.</p>
-            <p>All the groundworks for the lighting scheme were completed to a very high 
-                standard, I would have no issues with appointing A Parry Construction on 
-                any future schemes.”</p>
-            <h3>Dyfed Thomas – Conwy County Borough Council</h3>
+        <article>
+            <section class="testimonial">
+                <p>“A Parry Construction Co. Ltd. were recently appointed by Principal 
+                    Contractor, Mega Electrical NW Ltd. on a Welsh Government lighting 
+                    upgrade scheme at Parc Eirias. The project was procured through the 
+                    NMWTRA framework on behalf of Conwy County Borough Council</p>
+                <p>A Parry Construction carried out all the groundworks for the lighting 
+                    scheme. They maintained good lines of communication with all stakeholders 
+                    which enabled them to work seamlessly within the partnership. The site 
+                    team were knowledgeable and professional with good working practices, they 
+                    kept the site clean and tidy throughout the construction phase.</p>
+                <p>All the groundworks for the lighting scheme were completed to a very high 
+                    standard, I would have no issues with appointing A Parry Construction on 
+                    any future schemes.”</p>
+                <h3>Dyfed Thomas – Conwy County Borough Council</h3>
+            </section>
         </article>
     </main>
     <footer>
