--- a/caseStudies/emergencyWorks.html
+++ b/caseStudies/emergencyWorks.html
@@ -24,12 +24,12 @@
             <li><a href="../contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <div class="banner emergencyWorks"></div>
-    <div id="title"  class="title">
-        <h1 class="emergencyTitle">WCBC Emergency Works</h1>
-    </div>
     <main>
-        <article>
+        <article class="banner">
+            <img src="../stylesheets/images/wrecsam-banner.jpg" alt="staff members working in an office">
+            <h1 class="emergencyTitle">WCBC Emergency Works</h1>
+        </article>
+        <article class="grey">
             <p>We have been selected to carry out a number of 
                 emergency gulley repairs for Wrexham County 
                 Borough Council along the A483. These works have 
@@ -71,17 +71,19 @@
                 this work could be up to £40,000.00 depending on the 
                 repairs that need completing.</p>
         </article>
-        <article class="testimonial">
-            <p>“WCBC have used A Parry Construction on many occasions for 
-                planned and emergency works on the A483 and A5 Trunk Road 
-                network over the last 5 years. They have always been professional 
-                and efficient with the works they undertake which is typically 
-                gully repair or replacement, drainage, patching or kerbing works. 
-                They always provide a realistic timeframe for works and comply 
-                with the H+S requirements on the Trunk Road network. On the rare 
-                occasion works needs to be corrected this is undertaken promptly 
-                without any hesitation.”</p>
-            <h3>Matthew Ellison – Wrexham County Borough Council</h3>
+        <article>
+            <section class="testimonial">
+                <p>“WCBC have used A Parry Construction on many occasions for 
+                    planned and emergency works on the A483 and A5 Trunk Road 
+                    network over the last 5 years. They have always been professional 
+                    and efficient with the works they undertake which is typically 
+                    gully repair or replacement, drainage, patching or kerbing works. 
+                    They always provide a realistic timeframe for works and comply 
+                    with the H+S requirements on the Trunk Road network. On the rare 
+                    occasion works needs to be corrected this is undertaken promptly 
+                    without any hesitation.”</p>
+                <h3>Matthew Ellison – Wrexham County Borough Council</h3>
+            </section>
         </article>
     </main>
     <footer>
