--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,12 @@
             <li><a href="contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <div class="banner"></div>
-    <div id="title"  class="title">
-        <h1>Contact Us</h1>
-    </div>
     <main>
-        <article class="details">
+        <article class="banner">
+            <img src="stylesheets/images/contact-header.jpg" alt="three old-style telephones">
+            <h1>Contact Us</h1>
+        </article>
+        <article class="details grey">
             <section>
                 <h2>Our address:</h2>
                 <ul>
