--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
     <section class="homeOpen">
-        <img src="stylesheets/images/services-header.jpg" alt="">
+        <video autoplay muted>
+            <source src="stylesheets/images/A PARRY - 1080 - SHOWCASE.mp4" type="video/mp4">
+          </video>        
         <div>
             <a href="#header"><i class="fa-solid fa-angles-down"></i></a>
         </div>
