--- a/services/earthworks.html
+++ b/services/earthworks.html
@@ -26,10 +26,14 @@
     </header>
     <div class="banner earthworks"></div>
     <div id="title"  class="title earthworksTitle">
-        <h1>Earthworks and bulk excavation</h1>
+        
     </div>
     <main>
-        
+        <article class="banner">
+            <img src="../stylesheets/images/earthworks-banner.jpg" alt="construction workers working on a road">
+            <h1>Earthworks and bulk excavation</h1>
+        </article>
+
     </main>
     <footer>
         <article>
