--- a/services/landscaping.html
+++ b/services/landscaping.html
@@ -26,10 +26,13 @@
     </header>
     <div class="banner landscaping"></div>
     <div id="title"  class="title landscapingTitle">
-        <h1>Landscaping and environmental</h1>
+        
     </div>
     <main>
-        
+        <article class="banner">
+            <img src="../stylesheets/images/landscaping-banner.jpg" alt="construction workers working on a road">
+            <h1>Landscaping and environmental</h1>
+        </article>
     </main>
     <footer>
         <article>
