--- a/services/maintenance.html
+++ b/services/maintenance.html
@@ -24,12 +24,11 @@
             <li><a href="../contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <div class="banner maintenance"></div>
-    <div id="title"  class="title maintenanceTitle">
-        <h1>Planned and reactive maintenance</h1>
-    </div>
     <main>
-        
+        <article class="banner">
+            <img>
+            <h1>Planned and reactive maintenance</h1>
+        </article> 
     </main>
     <footer>
         <article>
