--- a/services/roads.html
+++ b/services/roads.html
@@ -24,24 +24,29 @@
             <li><a href="../contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <div class="banner roads"></div>
-    <div id="title"  class="title roadsTitle">
-        <h1>Road and drainage, culverts and car parks</h1>
-    </div>
     <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
-            elit. Vestibulum a turpis leo. Quisque sed sapien 
-            ut dui cursus tempor id accumsan enim. Vestibulum 
-            ultricies arcu fermentum, aliquet felis ac, feugiat 
-            elit. Nunc sed commodo ex, et tincidunt ligula. 
-            Duis ultrices felis in mollis facilisis. Sed a accumsan 
-            velit. Suspendisse sit amet tincidunt lorem. Vestibulum 
-            dignissim elit nec dui ultricies, quis venenatis leo 
-            varius. Nulla a rutrum quam. Lorem ipsum dolor sit amet, 
-            consectetur adipiscing elit. Vestibulum mollis bibendum 
-            nisi, varius fringilla sapien condimentum ac. Interdum 
-            et malesuada fames ac ante ipsum primis in faucibus.</p>
+        <article class="banner">
+            <img src="../stylesheets/images/3 - TOP BRIDGE - WEBSITE.jpg" alt="construction workers working on a road">
+            <h1>Road and drainage, culverts and car parks</h1>
+        </article>
+        <article class="grey">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                elit. Vestibulum a turpis leo. Quisque sed sapien 
+                ut dui cursus tempor id accumsan enim. Vestibulum 
+                ultricies arcu fermentum, aliquet felis ac, feugiat 
+                elit. Nunc sed commodo ex, et tincidunt ligula. 
+                Duis ultrices felis in mollis facilisis. Sed a accumsan 
+                velit. Suspendisse sit amet tincidunt lorem. Vestibulum 
+                dignissim elit nec dui ultricies, quis venenatis leo 
+                varius. Nulla a rutrum quam. Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Vestibulum mollis bibendum 
+                nisi, varius fringilla sapien condimentum ac. Interdum 
+                et malesuada fames ac ante ipsum primis in faucibus.</p>
+                
+        </article>
+        <article>
             <h2>Related Case Studies:</h2>
+        </article>
     </main>
     <footer>
         <article>
