--- a/about.html
+++ b/about.html
@@ -23,35 +23,36 @@
             <li><a href="caseStudies.html">Case Studies</a></li>
             <li><a href="contact.html">Contact Us</a></li>   
         </nav>
-    </header>
-    <div class="banner"></div>
-    <div id="title"  class="title">
-        <h1>About Us</h1>
-    </div>    
+    </header>   
     <main>
-        <section class="info">
-        <p>Operating since xxxx, we pride ourselves in having a highly 
-            skilled and experienced work force, completing all of our 
-            projects to an extremely high standard whilst always complying 
-            to current health and safety requlations. We offer Civil Engineering 
-            and groundwork services to both the Private and Public Sector.</p>
-        <p>We work closely with all our clients to offer any valued 
-            engineering expertise to help deliver works to a high quality.</p>
-        <p>We specialise in all types of Civil Engineering, Groundworks and 
-            Servicing, covering a wide area across North Wales and the North West.</p>
-        <p>You can read more about all the services we can provide on our 
-            <a href="services.html">Services page</a>.</p>
-        </section>
-        <aside class="services">
-            <img src="stylesheets/images/services-thumbnail.jpg" alt="digger carrying dirt">
-            <p>Some of the servies we offer include:</p>
-            <ul>
-                <li>Road and drainage, culverts and car parks</li>
-                <li>Earthworks and bulk excavation</li>
-                <li>Reinforced concrete structures</li>
-            </ul>
-            
-        </aside>
+        <article class="banner">
+            <img src="stylesheets/images/about-banner.jpg" alt="staff members working in an office">
+            <h1>About Us</h1>
+        </article>
+        <article class="info grey">
+            <section>
+                <p>Operating since xxxx, we pride ourselves in having a highly 
+                    skilled and experienced work force, completing all of our 
+                    projects to an extremely high standard whilst always complying 
+                    to current health and safety requlations. We offer Civil Engineering 
+                    and groundwork services to both the Private and Public Sector.</p>
+                <p>We work closely with all our clients to offer any valued 
+                    engineering expertise to help deliver works to a high quality.</p>
+                <p>We specialise in all types of Civil Engineering, Groundworks and 
+                    Servicing, covering a wide area across North Wales and the North West.</p>
+                <p>You can read more about all the services we can provide on our 
+                    <a href="services.html">Services page</a>.</p>
+            </section>
+            <aside class="services">
+                <img src="stylesheets/images/services-thumbnail.jpg" alt="digger carrying dirt">
+                <p>Some of the servies we offer include:</p>
+                <ul>
+                    <li>Road and drainage, culverts and car parks</li>
+                    <li>Earthworks and bulk excavation</li>
+                    <li>Reinforced concrete structures</li>
+                </ul>
+            </aside>
+        </article>
     </main>
     <footer>
         <article>
