--- a/services/groundwork.html
+++ b/services/groundwork.html
@@ -24,12 +24,11 @@
             <li><a href="../contact.html">Contact Us</a></li>   
         </nav>
     </header>
-    <div class="banner groundworks"></div>
-    <div id="title"  class="title groundworksTitle">
-        <h1>Groundwork and Ducting</h1>
-    </div>
     <main>
-        
+        <article class="banner">
+            <img src="../stylesheets/images/groundworking-banner.jpg" alt="construction workers working on a road">
+            <h1>Groundwork and Ducting</h1>
+        </article>
     </main>
     <footer>
         <article>
