Placeholder content added to the home page and styled

--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
         </nav>
     </header>
     <main>
-        <article>
-
-        </article>
-        <article>
-
+        <article class="grey">
+            <section class="intro">
+                <img src="stylesheets/images/placeholder.png" alt="">
+                <div>
+                    <p>We are A Parry Construction, a civil engineering company.</p> 
+                    <p>We have been opperating from North Wales since XXXX.</p>
+                    <p>We specialse in ...</p> 
+                </div>
+            </section>
         </article>
         <article class="awards">
             <img src="stylesheets/images/creditations/Parry's ISO Logo 1.png" alt="">
@@ -45,6 +49,39 @@
             <img src="stylesheets/images/creditations/cpcs.png" alt="">
             <img src="stylesheets/images/creditations/cscs.png" alt="">
             <img src="stylesheets/images/creditations/swqr.png" alt="">
+        </article>
+        <article class="grey">
+            <section class="featuredStudy">
+                <img src="stylesheets/images/A PARRY - N (1).jpg" alt="">
+                <div>
+                    <h2>Llangollen Project</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Etiam scelerisque elit vitae lectus facilisis, et vehicula 
+                        lacus mattis. Nulla eget tristique risus. Maecenas semper 
+                        nisi ac dui dictum convallis. In ac feugiat mauris. Sed 
+                        interdum viverra consequat. Vivamus lacinia sollicitudin 
+                        ante eu pretium. Quisque vel imperdiet urna. Cras convallis 
+                        tempus eleifend.</p>
+                    <a href="">Read More</a>
+                </div>
+            </section>
+        </article>
+        <article class="ourValues">
+            <h2>Our Values</h2>
+            <ul class="values">
+                <li><i class="fa-solid fa-circle-check"></i><span>Collaboration</span> - 
+                    We aim to work together with all our clients to provide tailored 
+                    services to suit their needs</li>
+                <li><i class="fa-solid fa-circle-check"></i><span>Transparency</span> - 
+                    We strive to always be open and honest with all of our customers</li>
+                <li><i class="fa-solid fa-circle-check"></i><span>Integrity</span> - 
+                    Our team always takes pride in their work and will complete every 
+                    job to a high standard</li>
+                <li><i class="fa-solid fa-circle-check"></i><span>Improvement</span> - 
+                    We are always bettering ourselves to be able to provide our customers 
+                    with the best quality services</li>
+            </ul>
+            <img src="stylesheets/images/placeholder.png" alt="">
         </article>
     </main>
     <footer>
