Updates made to the footer

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="menu.js"></script>
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
     <title>About us - A Parry Construction</title>
@@ -26,12 +27,12 @@
     </header>   
     <main>
         <article class="banner">
-            <img src="stylesheets/images/about-banner.jpg" alt="staff members working in an office">
+            <img src="stylesheets/images/office.jpg" alt="staff members working in an office">
             <h1>About Us</h1>
         </article>
         <article class="info grey">
             <section>
-                <p>Operating since xxxx, we pride ourselves in having a highly 
+                <p>Operating since 1991, we pride ourselves in having a highly 
                     skilled and experienced work force, completing all of our 
                     projects to an extremely high standard whilst always complying 
                     to current health and safety requlations. We offer Civil Engineering 
@@ -39,8 +40,8 @@
                 <p>We work closely with all our clients to offer any valued 
                     engineering expertise to help deliver works to a high quality.</p>
                 <p>We specialise in all types of Civil Engineering, Groundworks and 
-                    Servicing, covering a wide area across North Wales and the North West.</p>
-                <p>You can read more about all the services we can provide on our 
+                    Servicing, covering a wide area across North Wales and the North West.
+                You can read more about all the services we can provide on our 
                     <a href="services.html">Services page</a>.</p>
             </section>
             <aside class="services">
@@ -76,28 +77,19 @@
                     <li><a href="">Case Studies</a></li>
                     <li><a href="">Contact Us</a></li>
                 </ul>
-                <div>
-                    <a href="https://www.facebook.com/AParryLtd" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>                    
-                    <a href="https://twitter.com/ParryLtd" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://www.instagram.com/aparryconstruction/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                </div>
             </section>
-            <section class="form">
-                <h2>Leave us a message:</h2>
-                <form action="">
-                    <label for="name">Name</label>
-                    <input type="text" name="name">
-                    <label for="email">Email Address:</label>
-                    <input type="email" name="email">
-                    <label for="message">Message:</label>
-                    <textarea name="message"></textarea>
-                    <input type="submit" value="Send">
-                </form>
+            <section>
+                <h2>Follow Us:</h2>
+                <ul>
+                    <li><i class="fa-brands fa-facebook-f"></i><a href="https://www.facebook.com/AParryLtd" target="_blank" rel="noopener noreferrer">A. Parry Construction Co. Ltd</a></li>                    
+                    <li><i class="fa-brands fa-twitter"></i><a href="https://twitter.com/ParryLtd" target="_blank" rel="noopener noreferrer">@ParryLtd</a></li>
+                    <li><i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/aparryconstruction/" target="_blank" rel="noopener noreferrer">@aparryconstruction</a></li>
+                </ul>
             </section>
         </article>
         <article class="second">
             <section>
-                <p><span>&#169;</span> A Parry Construction CO LTD</p>
+                <p><span>&#169;</span> A Parry Construction Co. LTD</p>
             </section>
             <section>
                 <p>Website design and development by <a href="">Zara Bostock</a></p>
