--- a/caseStudies/eiriasPark.html
+++ b/caseStudies/eiriasPark.html
@@ -109,28 +109,19 @@
                     <li><a href="">Case Studies</a></li>
                     <li><a href="">Contact Us</a></li>
                 </ul>
-                <div>
-                    <a href="https://www.facebook.com/AParryLtd" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook-f"></i></a>                    
-                    <a href="https://twitter.com/ParryLtd" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://www.instagram.com/aparryconstruction/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                </div>
             </section>
-            <section class="form">
-                <h2>Leave us a message:</h2>
-                <form action="">
-                    <label for="name">Name</label>
-                    <input type="text" name="name">
-                    <label for="email">Email Address:</label>
-                    <input type="email" name="email">
-                    <label for="message">Message:</label>
-                    <textarea name="message"></textarea>
-                    <input type="submit" value="Send">
-                </form>
+            <section>
+                <h2>Follow Us:</h2>
+                <ul>
+                    <li><i class="fa-brands fa-facebook-f"></i><a href="https://www.facebook.com/AParryLtd" target="_blank" rel="noopener noreferrer">A. Parry Construction Co. Ltd</a></li>                    
+                    <li><i class="fa-brands fa-twitter"></i><a href="https://twitter.com/ParryLtd" target="_blank" rel="noopener noreferrer">@ParryLtd</a></li>
+                    <li><i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/aparryconstruction/" target="_blank" rel="noopener noreferrer">@aparryconstruction</a></li>
+                </ul>
             </section>
         </article>
         <article class="second">
             <section>
-                <p><span>&#169;</span> A Parry Construction CO LTD</p>
+                <p><span>&#169;</span> A Parry Construction Co. LTD</p>
             </section>
             <section>
                 <p>Website design and development by <a href="">Zara Bostock</a></p>
