--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="menu.js"></script>
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
     <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
-    <title>Home</title>
+    <title>A Parry Construction</title>
 </head>
 <body>
     <section class="homeOpen">
@@ -37,9 +38,8 @@
             <section class="intro">
                 <img src="stylesheets/images/vans.jpg" alt="">
                 <div>
-                    <p>We are A Parry Construction, a civil engineering company.</p> 
-                    <p>We have been opperating from North Wales since 1991.</p>
-                    <p>We specialse in ...</p> 
+                    <p>Here at A Parry Construction we specialise in ... with over 30 years experiance.</p> 
+                     
                 </div>
             </section>
         </article>
@@ -100,11 +100,11 @@
             <section>
                 <h2>Quick Links:</h2>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Case Studies</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="caseStudies.html">Case Studies</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </section>
             <section>
