--- a/caseStudies/A55Sign.html
+++ b/caseStudies/A55Sign.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../stylesheets/standards.css">
     <link rel="stylesheet" href="../stylesheets/caseStudyTemplate.css">
     <script src="../menu.js"></script>
+    <link rel="shortcut icon" href="../favicon-16x16.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
@@ -30,6 +31,9 @@
             <h1>FCC A55 Sign installation</h1>
         </article>
         <article class="grey">
+            <div class="backButton">
+                <a href="../caseStudies.html"><i class="fa-solid fa-arrow-left"></i>Back</a>
+            </div>
             <p>We were appointed by Flintshire County Council on a 
                 scheme which consisted of replacing the existing 
                 brown Tourism Signs at Junctions 31 and 32 on the 
@@ -112,11 +116,11 @@
             <section>
                 <h2>Quick Links:</h2>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Case Studies</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../about.html">About Us</a></li>
+                    <li><a href="../services.html">Services</a></li>
+                    <li><a href="../caseStudies.html">Case Studies</a></li>
+                    <li><a href="../contact.html">Contact Us</a></li>
                 </ul>
             </section>
             <section>
