--- a/caseStudies/eiriasPark.html
+++ b/caseStudies/eiriasPark.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../stylesheets/standards.css">
     <link rel="stylesheet" href="../stylesheets/caseStudyTemplate.css">
     <script src="../menu.js"></script>
+    <link rel="shortcut icon" href="../favicon-16x16.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/7d0f299f51.js" crossorigin="anonymous"></script>
@@ -30,7 +31,11 @@
             <h1>Eirias Park Lighting</h1>
         </article>
         <article class="grey">
-            <p>We were appointed by the principal contractor <a href="https://mega-electrical.co.uk/">
+            <div class="backButton">
+                <a href="../caseStudies.html"><i class="fa-solid fa-arrow-left"></i>Back</a>
+            </div>
+            
+            <p>We were appointed by the principal contractor <a href="https://mega-electrical.co.uk/" target="_blank" rel="noopener noreferrer">
                 Mega Electrical NW Ltd</a> to undertake the civils engineering works for new lighting 
                 scheme at Eirias Park. The area in which the lighting was to be 
                 upgraded had numerous risks to consider as it is a popular location 
@@ -103,11 +108,11 @@
             <section>
                 <h2>Quick Links:</h2>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Case Studies</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../about.html">About Us</a></li>
+                    <li><a href="../services.html">Services</a></li>
+                    <li><a href="../caseStudies.html">Case Studies</a></li>
+                    <li><a href="../contact.html">Contact Us</a></li>
                 </ul>
             </section>
             <section>
